--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,39 @@ configure([globalModule, coreModule, webModule]) {
     apply(plugin: 'maven')
     apply(plugin: 'idea')
     apply(plugin: 'cuba')
+    apply(plugin: 'groovy')
+
+    sourceSets {
+        test {
+            java {
+                srcDirs = ['test']
+            }
+            groovy {
+                srcDirs = ['test']
+            }
+        }
+        testUnit {
+            java {
+                srcDirs = ['test-unit']
+            }
+            groovy {
+                srcDirs = ['test-unit']
+            }
+        }
+    }
 
     dependencies {
-        testCompile('junit:junit:4.12')
+        compile group: 'io.vavr', name: 'vavr', version: '0.10.2'
+
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile group: 'cglib', name: 'cglib-nodep', version: '3.3.0'
+        testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.8', ext: 'pom'
+        testCompile group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5'
+        testRuntime group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+
+        testUnitCompile sourceSets.main.output
+        testUnitCompile configurations.testCompile
+        testUnitRuntime configurations.testRuntime
     }
 
     task sourceJar(type: Jar) {
